# askdagger_cliport

./: .gitignore  README.md  pyproject.toml
figures/: demo_types.py  domain_shift.py  evaluation.py  evaluation_wo_relabel.py  pier.py  real.py  sensitivity.py  training_scenario1.py  training_scenario2.py  training_scenario3.py
notebooks/: askdagger_cliport.ipynb
scripts/: eval.sh  eval_unseen.sh  google_objects_download.sh  results_download.py  train_interactive.sh  train_interactive_domain_shift.sh
src/askdagger_cliport/: __init__.py  dataset.py  demos.py  eval.py  interactive_agent.py  pier.py  sag.py  train.py  train_interactive.py  train_interactive_domain_shift.py  uncertainty_quantification.py
src/askdagger_cliport/agents/: __init__.py  transporter.py  transporter_lang_goal.py
src/askdagger_cliport/cfg/: config.yaml  data.yaml  eval.yaml  train.yaml  train_interactive.yaml
src/askdagger_cliport/environments/: environment.py
src/askdagger_cliport/models/: __init__.py  clip_lingunet_lat.py  resnet.py  resnet_lat.py
src/askdagger_cliport/models/core/: attention.py  clip.py  fusion.py  transport.py  unet.py
src/askdagger_cliport/models/streams/: two_stream_attention.py  two_stream_attention_lang_fusion.py  (+2 more)
src/askdagger_cliport/tasks/: __init__.py  cameras.py  grippers.py  packing_google_objects.py  packing_shapes.py  primitives.py  put_block_in_bowl.py  task.py
src/askdagger_cliport/utils/: pybullet_utils.py  simple_tokenizer.py  utils.py
tests/: test_agents.py  test_demos_train_eval.py  test_google_tasks.py  test_tasks.py
